Mon Oct  9 23:03:48 1995  Sam Hartman  <hartmans@tertius.mit.edu>

	* kerberos5.c: make session_key a pointer, and use
        krb5_copy_keyblock not krb5_copy_keyblock_contents; there was no
        reason to violate this abstraction.

Sun Sep 24 12:33:03 1995  Sam Hartman  <hartmans@tertius.mit.edu>

	* kerberos5.c: Initialize session key from the subsession key we get from krb5_mk_req_extended, using ticket key as a fallback.
	(kerberos5_send): Use appropriate enctypes when encryption defined.

Wed Sep 06 14:20:57 1995   Chris Provenzano (proven@mit.edu)

        * encrypt.h, kerberos5.c : s/keytype/enctype/g, s/KEYTYPE/ENCTYPE/g

Tue Sep 05 22:10:34 1995   Chris Provenzano (proven@mit.edu)

        * kerberos5.c : Remove krb5_enctype references, and replace with
                krb5_keytype where appropriate.

Thu Aug 3 11:36:15 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kerberos.c - Give the compiler something to compile when K4 disabled.


Tue Jun 27 16:16:18 EDT 1995	Paul Park	(pjpark@mit.edu)
	* enc_des.c, encrypt.c, krb4encpwd.c, read_password.c, rsaencpwd.c,
		spx.c - Give the compiler something to compile when these
		modules are essentially disabled.  Some compilers choke when
		there's nothing to compile.
	* setenv.c - Change prototype for __findenv to be static since it's
		really static.

Tue Jun 20 13:59:43 1995  Tom Yu  (tlyu@dragons-lair)

	* configure.in: fix typo

	* strrchr.c: NO_STRING_H -> HAVE_STRING_H

	* strftime.c: NO_STRING_H -> HAVE_STRING_H

	* strerror.c: NO_STRING_H -> HAVE_STRING_H

	* strdup.c: NO_STRING_H -> HAVE_STRING_H

	* strchr.c: NO_STRING_H -> HAVE_STRING_H

	* strcasecmp.c: NO_STRING_H -> HAVE_STRING_H

	* spx.c: NO_STRING_H -> HAVE_STRING_H

	* rsaencpwd: NO_STRING_H -> HAVE_STRING_H

	* read_password.c: NO_STRING_H -> HAVE_STRING_H

	* mem.c: NO_STRING_H -> HAVE_STRING_H

	* krb4encpwd.c: NO_STRING_H -> HAVE_STRING_H

	* kerberos5.c: NO_STRING_H -> HAVE_STRING_H

	* kerberos.c: NO_STRING_H -> HAVE_STRING_H
